--- a/src/app/components/user-details/user-details.component.html
+++ b/src/app/components/user-details/user-details.component.html
@@ -1,5 +1,5 @@
 <div class="min-h-screen relative flex items-center justify-center bg-gray-50 p-4">
-  <div *ngIf="user" class="max-w-3xl w-full p-6 bg-white shadow-md rounded-lg">
+  <div *ngIf="user$ | async as user " class="max-w-3xl w-full p-6 bg-white shadow-md rounded-lg">
     <div class="flex items-center justify-between mb-6">
       <h2 class="text-2xl font-semibold text-gray-800">User Details</h2>
       <button
