--- a/src/app/components/user-details/user-details.component.html
+++ b/src/app/components/user-details/user-details.component.html
@@ -41,11 +41,11 @@
       <p class="text-sm text-gray-500">Lat: {{ user.address.geo.lat }}, Lng: {{ user.address.geo.lng }}</p>
     </div>
 
-    <div>
+    <div *ngIf="user.company">
       <h3 class="text-lg font-semibold text-gray-700 mb-2">Company</h3>
       <p class="text-base text-gray-900 font-medium">{{ user.company.name }}</p>
       <p class="text-sm italic text-gray-600">"{{ user.company.catchPhrase }}"</p>
-      <p class="text-sm text-gray-500">{{ user.company.bs }}</p>
+      <p class="text-sm text-gray-500">{{ user.company?.bs }}</p>
     </div>
   </div>
 
